@@ -2,6 +2,7 @@
 Release date: April 13, 2022
 * Enhancement: Team Member - Added: Margin option for image
 * Enhancement: Advanced Accordion - Added border radius option for title
+* Enhancement: Twitter Tweet - Added support for URL dynamic tags
 
 == 2.6.11 ==
 Release date: March 23, 2022
